--- a/templates/supervisord.conf.erb
+++ b/templates/supervisord.conf.erb
@@ -1,5 +1,7 @@
 [unix_http_server]
 file=/var/run/supervisor.sock   ; (the path to the socket file)
+chown=root:nrpe
+chmod=0660
 
 [supervisord]
 logfile=/var/log/supervisor/supervisord.log ; (main log file;default $CWD/supervisord.log)
